# AssetVault

./: .gitignore  README.md  USER_FEEDBACK.md  user_feedback.xlsx
.github/workflows/: cd.yml  ci.yml
backend/: index.js  package-lock.json  package.json
contracts/: Cargo.toml
contracts/src/: lib.rs  test.rs
contracts/test_snapshots/test/: test_register_and_transfer.1.json
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/verify/[id]/: page.tsx
frontend/src/components/: FeedbackButton.tsx
frontend/src/utils/: soroban.ts
